--- a/index.html
+++ b/index.html
@@ -118,13 +118,14 @@
     </main>
 
     <footer>
-      <a href="">WebStudio</a>
-
+      <a href="/">WebStudio</a>
       <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com">info@devstudio.com</a><br />
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <ul>
+              <li><a href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li><a href="mailto:info@example.com">info@example.com</a></li>
+              <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          </ul>
       </address>
-    </footer>
+  </footer>
   </body>
 </html>
