--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 					<li><a href="/">Портфолио</a></li>
 					<li><a href="/">Контакты</a></li>
 				</ul>
-				<address>
-					<a href="mailto:info@devstudio.com ">info@devstudio.com</a><br />
-					<a href="tel:+380961111111">+38 096 111 11 11</a>
-				</address>
+				<!-- contacts -->
+				<ul>
+                <li><a href="mailto:info@devstudio.com ">info@devstudio.com</a><br /></li>
+				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+				</ul>	
 			</nav>
 		</header>
 		<!-- Уникальный контент -->
